--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -5,4 +5,7 @@
     <p class="alert alert-danger mt-3">Page not found</p>
 </div>
 
-<%- include('parts/footer')%>
+<%- include('parts/scripts')%>
+
+</body>
+</html>
