--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -6,5 +6,6 @@
     <title><%= pageTitle%> - Gallery App</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/libs/font-awesome-5/css/all.min.css">
 </head>
 <body>
